base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
   nginx.ingress.kubernetes.io/ssl-redirect: "false"
   cert-manager.io/cluster-issuer: cert-manager
   nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
   nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
   nginx.ingress.kubernetes.io/client-header-buffer-size: "128k"
   nginx.ingress.kubernetes.io/http2-max-header-size: "128k"
  #  kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
      - grafana.example.com
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: prd-monitoring-certificate
  ingressClassName: internal-nginx
  rules:
    - host: grafana.example.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: grafana
                port:
                  number: 80
